<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fr_guia5"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/blue_transparente"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@color/purple">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paso1"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paso2"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paso3"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/paso4"
            android:padding="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/btfinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btfinal"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/huevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dragon_eggs"
            android:layout_gravity="center"
            android:visibility="gone"
            android:clickable="true"/>

    </LinearLayout>



</FrameLayout>