<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fr_guia4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_transparente"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/saltoguia4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="144dp"
            android:background="@android:color/transparent"
            android:text="@string/saltar_guia"
            android:textColor="@color/green_transparente" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="546dp"
            android:background="@drawable/globo"
            android:fontFamily="@font/showg"
            android:gravity="center"
            android:text="@string/text4" />

        <ImageView
            android:id="@+id/dedos4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="674dp"
            android:src="@drawable/dedos" />

        <Button
            android:id="@+id/bsig4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="13dp"
            android:text="@string/siguiente"
            android:visibility="gone" />

    </RelativeLayout>


</FrameLayout>