<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr_guia"
    android:clickable="true"
    android:focusable="true"
    tools:context=".guia.frguia"
    android:background="@color/blue_transparente"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/saltoguia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:text="@string/saltar_guia"
            android:textColor="@color/green_transparente" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-4dp"
            android:layout_marginBottom="97dp"
            android:background="@drawable/globo"
            android:fontFamily="@font/showg"
            android:gravity="center"
            android:text="@string/text1" />

        <ImageView
            android:id="@+id/marca"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="-26dp"
            android:src="@drawable/marcador" />

        <ImageView
            android:layout_width="77dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginBottom="47dp"
            android:src="@drawable/baseline_arrow_outward_24" />

        <Button
            android:id="@+id/bsig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="13dp"
            android:text="@string/siguiente"
            android:visibility="gone" />

    </RelativeLayout>


</FrameLayout>